--- a/mod/quiz/mod.html
+++ b/mod/quiz/mod.html
@@ -112,11 +112,9 @@
     // The following are used for drop-down menus
     $yesnooptions = array(get_string("no"), get_string("yes"));
 
-    $attemptoptions = array();
-    $attemptoptions[0] = get_string("attemptsunlimited", "quiz");
-    $attemptoptions[1] = "1 ".moodle_strtolower(get_string("attempt", "quiz"));
-    for ($i=2;$i<=6;$i++) {
-        $attemptoptions[$i] = "$i ".moodle_strtolower(get_string("attempts", "quiz"));
+    $attemptoptions = array('0' => get_string('unlimited'));
+    for ($i = 1; $i <= 10; $i++) {
+        $attemptoptions[$i] = $i;
     }
 
     //enforced time delay between quiz attempts add-on
