--- a/enrol/manual/config.html
+++ b/enrol/manual/config.html
@@ -31,5 +31,33 @@
     </td>
 </tr>
 
+<tr>
+    <td align="right">enrol_manual_usepasswordpolicy:</td>
+    <td>
+<?php
+    $choices = array();
+    $choices['0'] = get_string('no');
+    $choices['1'] = get_string('yes');
+    choose_from_menu ($choices, 'enrol_manual_usepasswordpolicy', $frm->enrol_manual_usepasswordpolicy, '');
+?>
+    </td><td>
+    <?php  print_string('enrol_manual_usepasswordpolicy', 'enrol_manual') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_manual_requirekey:</td>
+    <td>
+<?php
+    $choices = array();
+    $choices['0'] = get_string('no');
+    $choices['1'] = get_string('yes');
+    choose_from_menu ($choices, 'enrol_manual_requirekey', $frm->enrol_manual_requirekey, '');
+?>
+    </td><td>
+    <?php  print_string('enrol_manual_requirekey', 'enrol_manual') ?>
+    </td>
+</tr>
+
 
 </table>
