quiz: MDL-6085 when editing a question from various places like a preview attempt or review screen, don't use a popup, instead take advantage of the fact that question.php now takes a returnurl. Merged from MOODLE_19_STABLE.
And MDL-17568 minor niggles with new queston navigation:
* The bit that scrolls down to the question you just submitted in adaptive mode was not working with random questions.
* Teachers reviewing an open attempt were shown the qusetions as editable, not read only!

--- a/question/type/question.html
+++ b/question/type/question.html
@@ -3,7 +3,7 @@
  * print_question() method.
  */
 ?>
-<div id="q<?php echo $question->id; ?>" class="que <?php echo $question->qtype; ?> clearfix">
+<div id="q<?php echo $actualquestionid; ?>" class="que <?php echo $question->qtype; ?> clearfix">
   <div class="info">
     <h2 class="no"><span class="accesshide">Question </span><?php echo $number;
     if ($editlink) { ?>
