forum subscriptions: MDL-14876 user of deprecated functions was breaking managing subscribers.
This was visible when, for example, unusual role definitions meant that someone could access a forum without being enrolled in a course.

Note that one of the places that was previously broken was front page forums. Since subscribers.php does not do paging at all, the fact that I have fixed this bug makes this page dangerous on large sites. A proper solution will have to wait until bug 17550 is fixed in HEAD.

This also fixes a minor problem introduced by MDL-12979.

--- a/mod/forum/subscriber.html
+++ b/mod/forum/subscriber.html
@@ -1,6 +1,5 @@
 
 <form id="subscriberform" method="post" action="subscribers.php">
-<input type="hidden" name="previoussearch" value="<?php p($previoussearch) ?>" />
 <input type="hidden" name="id" value="<?php echo $id?>" />
   <table align="center" border="0" cellpadding="5" cellspacing="0">
     <tr>
@@ -14,7 +13,7 @@
     </tr>
     <tr>
       <td valign="top">
-          <select name="removeselect[]" size="20" id="removeselect" multiple
+          <select name="removeselect[]" size="20" id="removeselect" multiple="multiple"
                   onFocus="getElementById('subscriberform').add.disabled=true;
                            getElementById('subscriberform').remove.disabled=false;
                            getElementById('subscriberform').addselect.selectedIndex=-1;">
@@ -34,12 +33,12 @@
         <br />
       </td>
       <td valign="top">
-          <select name="addselect[]" size="20" id="addselect" multiple
+          <select name="addselect[]" size="20" id="addselect" multiple="multiple"
                   onFocus="getElementById('subscriberform').add.disabled=false;
                            getElementById('subscriberform').remove.disabled=true;
                            getElementById('subscriberform').removeselect.selectedIndex=-1;">
           <?php
-              if (!empty($searchusers)) {
+              if (isset($searchusers)) {
                   echo "<optgroup label=\"$strsearchresults (" . count($searchusers) . ")\">\n";
                   foreach ($searchusers as $user) {
                       $fullname = fullname($user, true);
@@ -56,19 +55,10 @@
           ?>
          </select>
          <br />
-         <input type="text" name="searchtext" size="30" value="<?php p($searchtext, true) ?>" 
-                  onFocus ="getElementById('subscriberform').add.disabled=true;
-                            getElementById('subscriberform').remove.disabled=true;
-                            getElementById('subscriberform').removeselect.selectedIndex=-1;
-                            getElementById('subscriberform').addselect.selectedIndex=-1;"
-                  onkeydown = "var keyCode = event.which ? event.which : event.keyCode;
-                               if (keyCode == 13) {
-                                    getElementById('subscriberform').previoussearch.value=1;
-                                    getElementById('subscriberform').submit();
-                               } " />
+         <input type="text" name="searchtext" size="30" value="<?php p($searchtext, true) ?>" />
          <input name="search" id="search" type="submit" value="<?php p($strsearch) ?>" />
          <?php
-              if (!empty($searchusers)) {
+              if (isset($searchusers)) {
                   echo '<input name="showall" id="showall" type="submit" value="'.$strshowall.'" />'."\n";
               }
          ?>
