"MDL-14129, fix error() in moodle2"

--- a/backup/backup_execute.html
+++ b/backup/backup_execute.html
@@ -69,8 +69,7 @@
     echo "</table>";
     
     if (!$status) {
-        error ("The backup did not complete successfully", 
-               "$CFG->wwwroot/course/view.php?id=$course->id");
+        print_error('error', 'error', "$CFG->wwwroot/course/view.php?id=$course->id");
     }
 
     if (empty($to)) {
