--- a/backup/restore_precheck.html
+++ b/backup/restore_precheck.html
@@ -6,7 +6,7 @@
 
     //Checks we have the file variable
     if (!isset($file)) {         
-        error ("File not specified");
+        print_error('nofile');
     }
 
     //Check login   
