quiz editing: MDL-17289 putting back a piece of instruction text that seemed essential during usability testing in August 2008

--- a/lang/en_utf8/help/quiz/editconcepts.html
+++ b/lang/en_utf8/help/quiz/editconcepts.html
@@ -26,4 +26,6 @@ different questions, or so that one student gets different questions each time
 they attempt the quiz. For example, this can reduce cheating by making it harder
 for students to copy from each other. When a student starts an attempt at the
 quiz, the random question will be replaced by an actual question, picked at
-random from a certain category in the question bank.</p>
+random from a certain category in the question bank. You create a random 
+question by adding the selection of questions you want to a question bank 
+category, and then adding a random question for that category into the quiz.</p>
