--- a/blocks/search/config_global.html
+++ b/blocks/search/config_global.html
@@ -7,6 +7,7 @@ include_once $CFG->dirroot."/search/lib.php";
 
 $defaultfiletypes = "PDF,TXT,HTML,PPT,XML,DOC,HTM";
 
+global $DB;
 ?>
 <div style="text-align:center;">
 <table cellspacing="5" width="90%">
