--- a/admin/mnet/mnet_review.html
+++ b/admin/mnet/mnet_review.html
@@ -23,7 +23,7 @@ print_simple_box_start("center", "");
 ?>
 <form method="post" action="peers.php">
 <div>
-<input type="hidden" name="sesskey" value="<?php echo $USER->sesskey ?>" />
+<input type="hidden" name="sesskey" value="<?php echo sesskey() ?>" />
 <input type="hidden" name="step" value="commit" />
 <input type="hidden" name="last_connect_time" value="<?php echo $mnet_peer->last_connect_time; ?>" />
 <input type="hidden" name="id" value="<?php echo isset($mnet_peer->id)?  $mnet_peer->id : '0' ; ?>" />
